bug fix: options disabled in work mode

--- a/options.html
+++ b/options.html
@@ -186,7 +186,7 @@
         setInputDisabled(false);
       }
 
-      if(background.mainPomodoro.most_recent_mode == 'work') {
+      if(background.mainPomodoro.mostRecentMode == 'work') {
         startCallbacks.work();
       }
     </script>
