Make whitelisting actually work
In my haste I'd not thought this through properly: Blacklisting
works my looping through the list of domains for each tab and if
it finds a match it blocks it. For whitelisting I was also looping
through the list of domains and only blocking if there wasn't a
match.

Of course this doesn't work as say you are visiting domainA and you
have whitelisted domainA and domainB. Well it will loop through, be
ok for domainA, but then check against the whitelisted domainB and
block. Doh!

So, this is messy code and there is probably a cleaner way to do it,
now set a whitelistok boolean to false. This is OR'd against each
domain in the whitelist and then only at the end of the loop if
whitelistok is still false does the blocking occur.

--- a/background.html
+++ b/background.html
@@ -219,16 +219,21 @@
       var file = "content_scripts/" + action + ".js", location;
       location = tab.url.split('://');
       location = parseLocation(location[1]);
-      for(var k in PREFS.domainlist) {
-        listedPattern = parseLocation(PREFS.domainlist[k]);
-        if (!PREFS.whitelist) {
+      if (PREFS.whitelist) {
+        var whitelistok = false;
+        for(var k in PREFS.domainlist) {
+          listedPattern = parseLocation(PREFS.domainlist[k]);
+          whitelistok = whitelistok || locationsMatch(location, listedPattern)
+        }
+        if (!whitelistok) {
+          chrome.tabs.executeScript(tab.id, {file: file});
+        }
+      }
+      else {
+        for(var k in PREFS.domainlist) {
+          listedPattern = parseLocation(PREFS.domainlist[k]);
           if(locationsMatch(location, listedPattern)) {
-            chrome.tabs.executeScript(tab.id, {file: file});
-          }
-        } 
-        else if (PREFS.whitelist) {
-          if(!locationsMatch(location, listedPattern)) {
-            chrome.tabs.executeScript(tab.id, {file: file});
+              chrome.tabs.executeScript(tab.id, {file: file});
           }
         }
       }
