--- a/options.html
+++ b/options.html
@@ -123,7 +123,7 @@
     </form>
     <script type="text/javascript">
       var form = document.getElementById('options-form'),
-        domainlistEl = document.getElementById('domain-list'),
+        domainListEl = document.getElementById('domain-list'),
         whitelistEl = document.getElementById('white-list'),
         shouldRingEl = document.getElementById('should-ring'),
         clickRestartsEl = document.getElementById('click-resets'),
@@ -158,7 +158,7 @@
         console.log(durations);
         
         background.setPrefs({
-          domainlist: domainlistEl.value.split(/\r?\n/),
+          domainList: domainListEl.value.split(/\r?\n/),
           durations:       durations,
           shouldRing:      shouldRingEl.checked,
           clickRestarts:   clickRestartsEl.checked,
@@ -168,7 +168,7 @@
         return false;
       }
 
-      domainlistEl.onfocus = formAltered;
+      domainListEl.onfocus = formAltered;
       shouldRingEl.onchange = formAltered;
       clickRestartsEl.onchange = formAltered;
 
@@ -177,7 +177,7 @@
         timeFormatErrorEl.removeAttribute('class');
       }
 
-      domainlistEl.value = background.PREFS.domainlist.join("\n");
+      domainListEl.value = background.PREFS.domainList.join("\n");
       whitelistEl.checked = background.PREFS.whitelist;
       shouldRingEl.checked = background.PREFS.shouldRing;
       clickRestartsEl.checked = background.PREFS.clickRestarts;
@@ -198,7 +198,7 @@
       }
 
       function setInputDisabled(state) {
-        domainlistEl.disabled = state;
+        domainListEl.disabled = state;
         whitelistEl.disabled = state;
         for(var key in durationEls) {
           durationEls[key].disabled = state;
