fix incorrect location parsing
We were disregarding everything after the second slash, e.g.
google.com/reader/view => domain=google.com, path=reader

This would cause "google.com/reader/view" to block
"google.com/reader", "google.com/reader/whatever", etc.

Oops. Now the parsing behaves as expected:
google.com/reader/view => domain=google.com, path=reader/view

--- a/background.html
+++ b/background.html
@@ -196,7 +196,7 @@
 
     function parseLocation(location) {
       var components = location.split('/');
-      return {domain: components[0], path: components[1]};
+      return {domain: components.shift(), path: components.join('/')};
     }
 
     function pathsMatch(test, against) {
