add option to disable notifications (still defaults to showing them)

--- a/options.html
+++ b/options.html
@@ -133,11 +133,15 @@
         <span id="time-format-error" data-i18n="options_time_format_error"></span>
       </div>
       <div>
-        <input id="should-ring" type="checkbox">
+        <input id="show-notifications" type="checkbox" />
+        <label for="show-notifications" data-i18n="options_show_notifications"></label>
+      </div>
+      <div>
+        <input id="should-ring" type="checkbox" />
         <label for="should-ring" data-i18n="options_should_ring"></label>
       </div>
       <div>
-        <input id="click-restarts" type="checkbox">
+        <input id="click-restarts" type="checkbox" />
         <label for="click-restarts">
           <span data-i18n="options_click_restarts"></span>
           <p class="note" data-i18n="options_click_restarts_note"></p>
