Adding preference to unblock sites on breaks only.
Adding a preference that blocks sites at the end of a pomodoro so that
blocked sites can only be accessed during break time, encouraging the
start of a new Pomodoro at the end of a break to get back to break time!

--- a/options.html
+++ b/options.html
@@ -147,6 +147,10 @@
           <p class="note" data-i18n="options_click_restarts_note"></p>
         </label>
       </div>       
+      <div>
+        <input id="break-unblock-only" type="checkbox" />
+        <label for="break-unblock-only" data-i18n="options_break_unblock_only"></label>
+      </div>
       <button type="submit" id="save-button" data-i18n="options_save_changes"></button>
       <span id="save-successful" data-i18n="options_save_successful"></span>
     </form>
