implement long breaks; add option and adjust break timer duration calculation
remove sublimetext files

implement long breaks - kinda messy, and some messaging is still broken

clean up and fix durations updatePrefsFormat

cleanup

--- a/options.html
+++ b/options.html
@@ -120,10 +120,15 @@
         </label>
         <input id="work-duration" type="text" size="2" />
         <span class="minutes" data-i18n="minutes"></span>
-        <label for="break-duration">
-          <span data-i18n="break" data-i18n-caps></span>:
+        <label for="short_break-duration">
+          <span data-i18n="short_break" data-i18n-caps></span>:
         </label>
-        <input id="break-duration" type="text" size="2" />
+        <input id="short-break-duration" type="text" size="2" />
+        <span class="minutes" data-i18n="minutes"></span>
+        <label for="long-short_break-duration">
+          <span data-i18n="long_break" data-i18n-caps></span>:
+        </label>
+        <input id="long-break-duration" type="text" size="2" />
         <span class="minutes" data-i18n="minutes"></span>
         <span id="time-format-error" data-i18n="options_time_format_error"></span>
       </div>
