Prevent restarting break phase and add option to end break early.

--- a/options.html
+++ b/options.html
@@ -142,6 +142,10 @@
           <p class="note" data-i18n="options_click_restarts_note"></p>
         </label>
       </div>
+      <div>
+        <input id="click-skips" type="checkbox" />
+        <label for="click-skips" data-i18n="options_click_skips"></label>
+      </div>
       <button type="submit" id="save-button" data-i18n="options_save_changes"></button>
       <span id="save-successful" data-i18n="options_save_successful"></span>
     </form>
