Add option to automatically start work phase when break phase ends.

--- a/options.html
+++ b/options.html
@@ -146,6 +146,10 @@
         <input id="click-skips" type="checkbox" />
         <label for="click-skips" data-i18n="options_click_skips"></label>
       </div>
+      <div>
+        <input id="auto-continue" type="checkbox" />
+        <label for="auto-continue" data-i18n="options_auto_continue"></label>
+      </div>
       <button type="submit" id="save-button" data-i18n="options_save_changes"></button>
       <span id="save-successful" data-i18n="options_save_successful"></span>
     </form>
