more consistent control button styles on, say, facebook

--- a/notifications/notification.html
+++ b/notifications/notification.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Strict Workflow Notification</title>
+    <link type="text/css" rel="stylesheet" href="/controls.css" />
     <link type="text/css" rel="stylesheet" href="/notifications/notification.css" />
   </head>
   <body>
