--- a/options.html
+++ b/options.html
@@ -136,6 +136,14 @@
         <label for="should-ring" data-i18n="options_should_ring"></label>
       </div>
       <div>
+        <input id="autostart-work" type="checkbox" />
+        <label for="autostart-work" data-i18n="options_autostart_work"></label>
+      </div>
+      <div>
+        <input id="autostart-break" type="checkbox" />
+        <label for="autostart-break" data-i18n="options_autostart_break"></label>
+      </div>
+      <div>
         <input id="click-restarts" type="checkbox" />
         <label for="click-restarts">
           <span data-i18n="options_click_restarts"></span>
