reorganize modules to something bearable

--- a/options/edit.html
+++ b/options/edit.html
@@ -136,8 +136,8 @@
       <button type="submit" id="save-button" data-i18n="options_save_changes"></button>
       <span id="save-successful" data-i18n="options_save_successful"></span>
     </form>
-    <script type="text/javascript" src="/options/storage.js"></script>
-    <script type="text/javascript" src="/phases.js"></script>
+    <script type="text/javascript" src="/lib/options.js"></script>
+    <script type="text/javascript" src="/lib/phases.js"></script>
     <script type="text/javascript" src="/options/edit.js"></script>
   </body>
 </html>
